--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -19,6 +19,11 @@ logging:
     io.github.jhipster: DEBUG
     io.deh: DEBUG
 
+management:
+  health:
+    elasticsearch:
+      enabled: false
+
 spring:
   profiles:
     active: dev
@@ -40,6 +45,10 @@ spring:
       protocolVersion: V4
       compression: LZ4
       keyspaceName: deh
+    elasticsearch:
+      properties:
+        path:
+          home: target/elasticsearch
   mail:
     host: localhost
     port: 25
