--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -56,6 +56,8 @@ management:
         auto-time-requests: true
 
 spring:
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchAutoConfiguration,org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchDataAutoConfiguration
   application:
     name: deh
   profiles:
